
* V1.21.16
- Added auto-sensing support for the Raspberry Pi's GPIO interface, with
  memory-mapped I/O and SYS calls. While the calls are recognised on all
  builds, it's only active on the Raspberry Pi.
- Bug fix (regression): LIST in text builds would error after one line.
- Adjust graphsdl.c:buff_convex_poly bounds checking to allow off-screen
  drawing (we limit this elsewhere). For example, triangles drawn offscreen
  will now appear to be chopped off, rather than squashed into the screen.
- Code refactor - SYS calls are now (with a few exceptions) in their own file.
- Implemented AND=, OR=, EOR=, MOD= and DIV= from BB4W/BBCSDL and JGH's
  ARM BBC BASIC Plus.
* V1.21.15
- Bug fix: Setting *KEY15 scribbled outside array bounds.
- Bug fix: Erroneously trimming a string introduced in V1.21.8.
- Improvement: In networking code, move WSAStartup (MinGW) to init, if
  this fails, disable networking.
- Enabled VDU14/15 scroll paging. Note, by default Brandy uses CTRL-N for
  accessing the next line in the command line history (along with CTRL-P for
  previous line). OSBYTE 44 with x=0 disables this, so CTRL-N will send the
  VDU14 code, CTRL-P will send the VDU16 (CLG) code. (CTRL-O will always send
  the VDU15 code)
- Enabled VDU23,16; currently bits other than 3 are observed. This sets the
  scroll protect mode, X and Y cursor movement and whether the   screen is
  overprinted or scrolled when the Y limit is reached, and whether VDU5 mode
  linewraps.
  (Bit 3, making Y horizontal and X vertical is NOT supported.)
  Default value is 1 (*CONFIGURE NOSCROLL on RISC OS or BBC Master) and the VDU
  mode when RISC OS Desktop is running (or in a single tasking state from F12
  or Exit) regardless of Scroll/NoScroll configuration setting.
- Fix compiler warnings for MinGW - and allow DOS-type commands to return
  their output to the SDL window (so *dir works for example).
- Flush SDL queue on INKEY and MOUSE reads, otherwise events start to get